--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "./node_modules/.bin/prettier --single-quote --print-width=100 --use-tabs --write \"**/*.{js,jsx}\""
+  },
+  "devDependencies": {
+    "prettier": "^1.12.1"
   }
 }
