--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "viz",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "prettier": "./node_modules/.bin/prettier --write \"**/*.{js,jsx}\""
-  },
-  "devDependencies": {
-    "prettier": "^1.12.1"
-  },
-  "prettier":{
-    "printWidth": 100,
-    "singleQuote": true,
-    "useTabs": true
-  }
+	"name": "viz",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"react": "^16.3.2",
+		"react-dom": "^16.3.2",
+		"react-scripts": "1.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject",
+		"prettier": "./node_modules/.bin/prettier --write \"**/*.{js,jsx}\""
+	},
+	"devDependencies": {
+		"babel-eslint": "^8.2.3",
+		"eslint": "^4.19.1",
+		"eslint-config-airbnb": "^16.1.0",
+		"eslint-plugin-import": "^2.11.0",
+		"eslint-plugin-jsx-a11y": "^6.0.3",
+		"eslint-plugin-react": "^7.7.0",
+		"prettier": "^1.12.1",
+		"prettier-eslint": "^8.8.1"
+	},
+	"prettier": {
+		"printWidth": 100,
+		"singleQuote": true,
+		"useTabs": true
+	}
 }
