--- a/package.json
+++ b/package.json
@@ -12,21 +12,27 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
+		"precommit": "lint-staged",
 		"prettier": "./node_modules/.bin/prettier --write \"**/*.{js,jsx}\""
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.3",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
+		"eslint-config-prettier": "^2.9.0",
 		"eslint-plugin-import": "^2.11.0",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
 		"eslint-plugin-react": "^7.7.0",
-		"prettier": "^1.12.1",
-		"prettier-eslint": "^8.8.1"
+		"husky": "^0.14.3",
+		"lint-staged": "^7.0.4",
+		"prettier": "^1.12.1"
 	},
 	"prettier": {
 		"printWidth": 100,
 		"singleQuote": true,
 		"useTabs": true
+	},
+	"lint-staged": {
+		"*.{js,jsx}": ["prettier --write", "eslint --fix", "git add"]
 	}
 }
