--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.3",
+		"electron": "^1.8.4",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-config-prettier": "^2.9.0",
