--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"precommit": "lint-staged",
-		"prettier": "./node_modules/.bin/prettier --write \"**/*.{js,jsx}\""
+		"prettier": "prettier --write \"**/*.{js,jsx}\""
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.3",
