--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"dependencies": {
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
-		"react-scripts": "1.1.4"
+		"react-scripts": "1.1.4",
+		"electron": "^1.8.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -13,11 +14,11 @@
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"precommit": "lint-staged",
-		"prettier": "prettier --write \"**/*.{js,jsx}\""
+		"prettier": "prettier --write \"**/*.{js,jsx}\"",
+		"electron": "electron ./src/start.js"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.3",
-		"electron": "^1.8.4",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-config-prettier": "^2.9.0",
