--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-	"extends": ["airbnb", "prettier", "prettier/react"]
+	"extends": ["airbnb", "prettier", "prettier/react"],
+	"env": {
+		"browser": true,
+		"node": true
+	}
 }
