--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"electron": "^1.8.4",
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
 		"react-scripts": "1.1.4",
-		"electron": "^1.8.4"
+		"react-toolbox": "^2.0.0-beta.12"
 	},
 	"scripts": {
 		"start": "react-scripts start",
