FileInfoContext created and provided

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
 	"extends": ["airbnb", "prettier", "prettier/react"],
 	"env": {
 		"browser": true,
-		"node": true
+		"node": true,
+		"jasmine": true
 	}
-
 }
