--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"dexie": "^2.0.3",
 		"electron": "^1.8.4",
 		"immutable": "^3.8.2",
 		"react": "^16.3.2",
