--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"dexie": "^2.0.3",
 		"electron": "^1.8.4",
 		"immutable": "^3.8.2",
+		"platform": "^1.3.5",
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
 		"react-scripts": "1.1.4",
