renamed start.js to start-electron.js, and now opening the default folder by default

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"eject": "react-scripts eject",
 		"precommit": "lint-staged",
 		"prettier": "prettier --write \"**/*.{js,jsx}\"",
-		"electron": "electron ./src/start.js"
+		"electron": "electron ./src/start-electron.js"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.3",
