--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
 	"name": "viz",
 	"version": "0.1.0",
 	"private": true,
+	"main": "public/start-electron.js",
 	"dependencies": {
 		"dexie": "^2.0.3",
 		"electron": "^1.8.4",
+		"electron-is-dev": "^0.3.0",
 		"immutable": "^3.8.2",
 		"platform": "^1.3.5",
 		"react": "^16.3.2",
@@ -19,10 +21,12 @@
 		"eject": "react-scripts eject",
 		"precommit": "lint-staged",
 		"prettier": "prettier --write \"**/*.{js,jsx}\"",
-		"electron": "electron ./src/start-electron.js"
+		"electron": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\""
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.3",
+		"concurrently": "^3.5.1",
+		"electron-builder": "^20.11.1",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-config-prettier": "^2.9.0",
@@ -31,7 +35,8 @@
 		"eslint-plugin-react": "^7.7.0",
 		"husky": "^0.14.3",
 		"lint-staged": "^7.0.4",
-		"prettier": "^1.12.1"
+		"prettier": "^1.12.1",
+		"wait-on": "^2.1.0"
 	},
 	"prettier": {
 		"printWidth": 100,
