--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
 	"name": "viz",
 	"version": "0.1.0",
 	"private": true,
+	"author": "Fabien Allanic & Maxime Burlat",
 	"main": "public/start-electron.js",
+	"homepage": "./",
 	"dependencies": {
 		"dexie": "^2.0.3",
-		"electron": "^1.8.4",
 		"electron-is-dev": "^0.3.0",
 		"immutable": "^3.8.2",
 		"platform": "^1.3.5",
@@ -21,11 +22,14 @@
 		"eject": "react-scripts eject",
 		"precommit": "lint-staged",
 		"prettier": "prettier --write \"**/*.{js,jsx}\"",
-		"electron": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\""
+		"electron": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+		"electron-pack": "build -c.extraMetadata.main=build/start-electron.js",
+		"preelectron-pack": "npm build"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.3",
 		"concurrently": "^3.5.1",
+		"electron": "^1.8.4",
 		"electron-builder": "^20.11.1",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
@@ -49,5 +53,15 @@
 			"eslint --fix",
 			"git add"
 		]
+	},
+	"build": {
+		"appId": "io.viz",
+		"files": [
+			"build/**/*",
+			"node_modules/**/*"
+		],
+		"directories": {
+			"buildResources": "assets"
+		}
 	}
 }
