--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"clean": "rimraf ./build ./dist",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"precommit": "lint-staged",
@@ -40,6 +41,7 @@
 		"husky": "^0.14.3",
 		"lint-staged": "^7.0.4",
 		"prettier": "^1.12.1",
+		"rimraf": "^2.6.2",
 		"wait-on": "^2.1.0"
 	},
 	"prettier": {
