--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"precommit": "lint-staged",
 		"prettier": "prettier --write \"**/*.{js,jsx}\"",
 		"electron": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+		"electron-local": "electron .",
 		"electron-pack": "build -c.extraMetadata.main=build/start-electron.js",
 		"preelectron-pack": "npm run build"
 	},
@@ -59,12 +60,18 @@
 	},
 	"build": {
 		"appId": "io.viz",
+		"productName": "Viz",
 		"files": [
 			"build/**/*",
 			"node_modules/**/*"
 		],
 		"directories": {
 			"buildResources": "assets"
-		}
+		},
+		"fileAssociations": [{
+			"ext": ["png", "jpeg", "jpg", "gif"],
+			"name": "Image files",
+			"role": "Viewer"
+		}]
 	}
 }
