--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
 	"main": "public/start-electron.js",
 	"homepage": "./",
 	"dependencies": {
+		"debug": "^3.1.0",
 		"dexie": "^2.0.3",
 		"electron-is-dev": "^0.3.0",
 		"immutable": "^3.8.2",
-		"prop-types": "^15.6.1",
 		"platform": "^1.3.5",
+		"prop-types": "^15.6.1",
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
 		"react-scripts": "1.1.4",
@@ -69,7 +70,12 @@
 			"buildResources": "assets"
 		},
 		"fileAssociations": [{
-			"ext": ["png", "jpeg", "jpg", "gif"],
+			"ext": [
+				"png",
+				"jpeg",
+				"jpg",
+				"gif"
+			],
 			"name": "Image files",
 			"role": "Viewer"
 		}]
