--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"electron-pack": "build -c.extraMetadata.main=build/start-electron.js",
 		"preelectron-pack": "npm run clean && npm run build",
 		"postelectron-pack": "npm run copy-mac-exe",
-		"copy-mac-exe": "open ./dist/mac"
+		"copy-mac-exe": "open ./dist/mac",
+		"flow": "flow"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.3",
@@ -44,6 +45,7 @@
 		"eslint-plugin-import": "^2.11.0",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
 		"eslint-plugin-react": "^7.7.0",
+		"flow-bin": "^0.73.0",
 		"husky": "^0.14.3",
 		"lint-staged": "^7.0.4",
 		"open": "0.0.5",
